# crep

./: .gitignore  38  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
crep-indexer/: AGENTS.md  Cargo.toml
crep-indexer-cli/: .gitignore  AGENTS.md  Cargo.toml
crep-indexer-cli/src/: app.rs  logger.rs  main.rs  raw_searcher.rs  searcher.rs
crep-indexer/src/: git_searcher.rs  lib.rs  result_viewer.rs  searcher.rs  tokenizer.rs
crep-indexer/src/git/: diff.rs
crep-indexer/src/index/: check_binary.rs  document.rs  git_index.rs  git_index_debug.rs  git_index_serialization.rs  git_indexer.rs  index.rs  indexer.rs  mod.rs  not_committed_indexer.rs
crep-indexer/src/search/: git_searcher.rs  line_formatter.rs  mod.rs  permutation.rs  regex_search.rs  result_viewer.rs  search_debug.rs  search_result.rs  search_strategy.rs
crep-indexer/src/search/core/: mod.rs  search_docs.rs
crep-indexer/src/search/result/: mod.rs  search_result.rs  simple_repo_reader.rs  single_commit_search_result.rs
crep-indexer/src/util/: mod.rs
crep-indexer/src/util/bitmap/: intersect.rs  utils.rs
crep-indexer/src/util/fst/: mod.rs  test_util.rs
crep-indexer/src/util/serde/: fst.rs
crep-server/: .gitignore  AGENTS.md  Cargo.toml  README.md  pnpm-lock.yaml
crep-server/server/: Cargo.toml
crep-server/server/src/: config.rs  lib.rs  main.rs  server_context.rs
crep-server/server/src/api/: error.rs  health.rs  mod.rs  search.rs
crep-server/server/src/search/: mod.rs  repo_pool.rs  search.rs  search_cache.rs
crep-server/server/src/watch/: ignore_checker.rs  mod.rs  repo_watcher.rs
crep-server/src/: app.rs  main.rs
crep-server/web/: index.html  package.json  tsconfig.json  vite.config.ts
crep-server/web/scripts/: generate-types.mjs
crep-server/web/src/: App.tsx  main.tsx
crep-server/web/src/api/: client.ts  types.ts
git-ignore/: Cargo.toml
src/: git_indexer.rs  git_searcher.rs  index.rs  indexer.rs  main.rs  result_viewer.rs  searcher.rs  tokenizer.rs
src/git/: diff.rs
src/index/: document.rs  git_index.rs  git_indexer.rs  indexer.rs  mod.rs
trigram-hash/: Cargo.toml
trigram-hash/benches/: trigram_bench.rs
trigram-hash/src/: lib.rs  trigram_hash.rs  trigram_hash_v0.rs
