[package]
name = "search"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
fst = { version = "0.4", features = ["levenshtein"] }
ftree = "1.2.0"
git2 = "0.20.2"
indicatif = "0.17.11"
itertools = "0.14.0"
once_cell = "1.21.3"
owo-colors = "4.2.0"
priority-queue = "2.5.0"
regex = "1.11.1"
roaring = "0.11.0"
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
