[workspace]
members = [
  "crep-indexer",
  "crep-indexer-cli",
  "crep-server/server",
  "trigram-hash",
]
resolver = "3"

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0"
git2 = "0.20.2"
log = "0.4.28"
serde = "1.0.228"

[workspace.lints]
rust = {}

[profile.release]
debug = "line-tables-only"
strip = "none"
