[package]
name = "crep-indexer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
color-eyre = "0.6.5"
crep-indexer = { path = "../crep-indexer" }
crossterm = "0.29.0"
gag = "1"
git2 = "0.20.2"
ratatui = "0.29.0"
tui-input = "0.14.0"

[profile.release]
debug = true
strip = "none"
