[package]
name = "crep-indexer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.42", features = ["derive"] }
color-eyre = "0.6.5"
crep-indexer = { path = "../crep-indexer" }
crossterm = "0.29.0"
env_logger = "0.11.8"
git2 = { workspace = true }
hex = "0.4.3"
log = { workspace = true }
ratatui = "0.29.0"
tui-input = "0.14.0"

[lints]
workspace = true
