[package]
name = "crep-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.98"
arrayvec = "0.7.6"
bincode = { version = "2.0.1", features = ["serde"] }
fst = { version = "0.4", features = ["levenshtein"] }
ftree = "1.2.0"
git2 = { workspace = true }
indicatif = "0.18.0"
itertools = "0.14.0"
lru = "0.16.0"
log = "0.4.28"
once_cell = "1.21.3"
owo-colors = "4.2.0"
priority-queue = { version = "2.5.0", features = ["serde"] }
regex = "1.11.1"
regex-automata = { version = "0.1.9", features = ["transducer"] }
regex-syntax = "0.8.6"
roaring = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lib]
name = "crep_indexer"
path = "src/lib.rs"
