[package]
name = "crep-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crep-server"
path = "src/main.rs"

[[bin]]
name = "openapi-export"
path = "src/bin/openapi_export.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["clock"] }
crep-indexer = { path = "../../crep-indexer" }
git2 = { workspace = true }
hex = "0.4"
utoipa = { version = "5.0", features = ["axum_extras", "macros"] }
