[package]
name = "crep-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crep-server"
path = "src/main.rs"

[[bin]]
name = "openapi-export"
path = "src/bin/openapi_export.rs"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["clock"] }
crep-indexer = { path = "../../crep-indexer" }
git2 = { workspace = true }
hex = "0.4"
rayon = { workspace = true }
utoipa = { version = "5.0", features = ["axum_extras", "macros"] }
lru = "0.16.2"
